syntax = "proto3";
package palma.test;

option java_package = "vertis.palma.test";
option java_outer_classname = "TestSamples";
option java_multiple_files = true;

import "palma/palma_options.proto";
import "options.proto";

message Mark {
    option (palma.message).name = "test/auto/mark";

    enum MarkType {
        UNSET = 0;

        CAR = 1;
        TRUCK = 2;
    }

    string code = 1 [(palma.field).key = true];

    string russian_alias = 2 [(required) = true];
    bool some_required_bool = 3 [(required) = true];
    MarkType mark_type = 4 [(required) = true];
}

message Model {
    option (palma.message).name = "test/auto/mark/model";

    string code = 1 [(palma.field).key = true];

    Mark mark = 2 [(palma.field).link = true, (required) = true];

    repeated Color colors = 3 [(palma.field).link = true];

    int32 release_year = 4;
}

message RepeatedTestModel {
    repeated string primitives = 1 [(required) = true];
    repeated ModelWithOptionalMark.SomeOptionalMsg messages = 2 [(required) = true];
    repeated ModelWithOptionalMark.SomeOptionalMsg opt_messages = 3;
}

message ModelWithOptionalMark {
    option (palma.message).name = "test/auto/mark/model_opt";

    message SomeOptionalMsg {
        string code = 1 [(required) = true];
        string title = 2;
    }

    message SomeRequiredMsg {
        string code = 1;
        string title = 2 [(required) = true];
    }

    string code = 1 [(palma.field).key = true];

    Mark mark = 2 [(palma.field).link = true];
    SomeOptionalMsg some_msg = 3;
    SomeRequiredMsg required_msg = 4 [(required) = true];

}

message Color {
    option (palma.message).name = "test/color";
    option (palma.message).indexes = {fields: ['alias']};

    string code = 1 [(palma.field).key = true];

    string alias = 2;
}

message DictionaryWithoutName {
    string code = 1 [(palma.field).key = true];

    string alias = 2;
}

message ModelWithNestedLink {
    option (palma.message).name = "test/auto/mark/model_nested_link";

    string code = 1 [(palma.field).key = true];

    Mark mark = 2 [(palma.field).link = true];

    repeated ColorLink colors = 3;

    repeated int32 release_years = 4;

    OptionPackage package = 5;

}

message OptionPackage {
    repeated OptionLink links = 1;
    string name = 2;
    Color color = 3 [(palma.field).link = true];
}

message OptionLink {
    Option option = 1 [(palma.field).link = true];
    int32 price = 2;
}


message Option {
    option (palma.message).name = "test/auto/model/option";

    string code = 1 [(palma.field).key = true];
    string option_name = 2;
}

message ColorLink {
    string abc = 1;

    Color color = 2  [(palma.field).link = true];
}

message Foo {
    option (palma.message).name = "test/foo";
    string code = 1 [(palma.field).key = true];

    Bar bar = 2;

    Bar bar_link = 3 [(palma.field).link = true];
}

message Bar {
    option (palma.message).name = "test/bar";

    string code = 1 [(palma.field).key = true];

    Color color = 2 [(palma.field).link = true];
}

message BrokenIndex {
    option (palma.message).name = "test/broken";
    option (palma.message).indexes = {fields: ['unknown_field']};

    string code = 1 [(palma.field).key = true];

    string alias = 2;

    string other_alias = 3;
}

message MultiIndex {
    option (palma.message).name = "test/multi";
    option (palma.message).indexes = {fields: ['alias', 'other_alias']};

    string code = 1 [(palma.field).key = true];

    string alias = 2;

    string other_alias = 3;
}

message EncryptedMark {
    option (message).name = "test/encrypted/auto/mark";
    option (message).encrypted = true;

    string code = 1 [(field).key = true];

    string russian_alias = 2;
}

message EncryptedModel {
    option (message).name = "test/encrypted/auto/mark/model";
    option (message).encrypted = true;

    string code = 1 [(field).key = true];

    EncryptedMark mark = 2 [(field).link = true];

    int32 release_year = 4;
}

message SortModel {
    option (palma.message).name = "auto/mark/sort/model";
    option (palma.message).indexes = {fields: ['alias']};
    option (palma.message).indexes = {fields: ['russian_alias']};
    option (palma.message).indexes = {fields: ['prices']};

    string code = 1 [(palma.field).key = true];

    Mark mark = 2 [(palma.field).link = true];

    repeated Color colors = 3 [(palma.field).link = true];

    int32 release_year = 4;

    string alias = 5;

    string russian_alias = 6;

    repeated int32 prices = 7;

    string camelCaseField = 8;

    double safety_score = 9;
}

message WithAutoGenKey {
    option (palma.message).name = "with_auto_gen_key";
    option (palma.message).auto_gen_key = true;

    string code = 1 [(palma.field).key = true];

}

message IntKey {
    option (palma.message).name = "int_key";

    int32 code = 1 [(palma.field).key = true];
}

message OrderedMsg {
    option (palma.message).name = "sorting_dict";
    string code = 1 [(palma.field).key = true];

    int32 int_order = 2;
    string string_order = 3;
}
